# o2-cli

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/skills/o2-cli/: SKILL.md
.cursor/rules/: o2-cli.mdc
o2_cli/: __init__.py  __main__.py  api_sync.py  cli.py  client.py  config.py  exceptions.py  output.py  self_update.py  setup.py
o2_cli/commands/: __init__.py  _helpers.py  account.py  admin.py  auth.py  balance.py  config_cmd.py  deposits.py  fees.py  markets.py  mm.py  notifications.py  orders.py  positions.py  settings.py  setup_cmd.py  trades.py  withdrawals.py
